--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ h5,
 h6 {
   padding:0;
   margin:0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Open Sans', sans-serif;
+
 }
 
 .clear-fix {
@@ -25,30 +26,31 @@ h6 {
 }
 
 h1 {
-  font-size: 40px;
-  color: #f5a623;
-  line-height: 48px;
+  font-size: 2.5em;
+  color: #e24;
   display: inline;
+  font-family: 'Bowlby One SC', cursive;
 }
 
 h2 {
   font-weight: bold;
-  font-size: 24px;
-  color: #999;
+  font-size: 1.75em;
+  color: #eb6e80;
   line-height: 29px;
   padding: 10px;
+  font-family: 'Bowlby One SC', cursive;
 }
 
 h3 {
   font-style: italic;
-  font-size: 20px;
-  color: #000;
+  font-size: 1.25em;
+  color: #e24;
   line-height: 22px;
 }
 
 h4 {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 1em;
   color: #4a4a4a;
   line-height: 17px;
 }
@@ -95,7 +97,7 @@ a {
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #f3f3f3;
+  color: #438496;
   line-height: 28px;
 }
 
@@ -105,11 +107,11 @@ a {
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: #e9b000;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: #e9b000;
 }
 
 .white-text {
@@ -155,16 +157,26 @@ a {
 ul {
   list-style-type: none;
 }
+#pic{
+   float: left;
+   width: 50%;
+}
+
+#header-box{
+  width: 50%;
+  float: left;
+}
+
+#topContacts{
+text-align: left;
+}
 
 .biopic {
-  float: left;
-  padding: 10px;
-  width: 200px;
-  display: none;
+  width: 100%;
 }
 
 img {
-  padding: 10px;
+
 }
 
 span {
@@ -184,18 +196,14 @@ span {
 }
 
 @media only screen and (max-width:900px) {
-  .biopic {
-    width: 175px;
-  }
+
 }
 
 @media only screen and (max-width: 750px) {
   #lets-connect {
     margin-top: 10%;
   }
-  .biopic {
-    width: 150px;
-  }
+
   .welcome-message {
     display: none;
   }
@@ -213,9 +221,11 @@ span {
   padding-bottom: 5%;
 }
 
+
+
 @media only screen and (min-width: 750px) {
   #skills-h3,
-  .biopic {
-    display: block;
   }
 }
+
+
