--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,6 @@
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding:0;
-  margin:0;
-  font-family: 'Open Sans', sans-serif;
-
-}
-
-.clear-fix {
-  overflow: auto;
+.container {
+  padding: 0px;
+  margin: 0px;
 }
 
 .education-entry,
@@ -25,11 +9,30 @@ h6 {
   padding: 0 5%;
 }
 
+img {
+  padding: 5%;
+}
+
+#pic {
+  padding:0;
+}
+
+#header-box{
+  padding:0px;
+}
+
+#biopic {
+  padding: 0;
+}
+
 h1 {
-  font-size: 2.5em;
+  font-size: 5em;
+  line-height: 80%;
   color: #e24;
   display: inline;
   font-family: 'Bowlby One SC', cursive;
+  padding: 5%;
+  display: block;
 }
 
 h2 {
@@ -63,13 +66,19 @@ h5 {
 
 }
 
+#role {
+  padding-left: 7%;
+  font-size: 1.5em;
+  font-style: bold;
+  color: #e9b000;
+  padding-top: 0;
+}
 
 .date-text {
   font-style: italic;
   font-size: 14px;
   color: #999;
   line-height: 16px;
-  float: left;
 }
 
 .location-text {
@@ -91,19 +100,24 @@ a {
   color: #1199c3;
   text-decoration: none;
   margin-top: 10px;
-  display: block;
+
 }
 
 .welcome-message {
   font-style: italic;
-  font-size: 18px;
-  color: #438496;
-  line-height: 28px;
+  font-size: 1.5em;
+  color: #dcc7aa;
+  padding: 10%;
+  display: block;
+}
+
+#message {
+  background-color:#008f95;
 }
 
 #skills-h3 {
-  color: #f5ae23;
-  display: none;
+  color: #eb6e80;
+  margin: 1em;
 }
 
 .orange {
@@ -111,12 +125,13 @@ a {
 }
 
 .orange-text {
-  color: #e9b000;
+  color: #008f95;
 }
 
 .white-text {
   font-weight: bold;
-  color: #fff;
+  color: #dcc7aa;
+  padding: 7d%;
 }
 
 .gray {
@@ -131,101 +146,88 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #fff;
 }
 
+#projects {
+  background-color: #e9b000;
+
+}
 .flex-box {
-  display: -webkit-flex;
+ /* display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 10px;
+  padding: 10px;*/
 }
 
 .flex-column {
-  display: flex;
+/*  display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  padding: 10px;
+  flex-wrap: nowrap;*/
 }
 
 .center-content {
   padding: 2.5% 5%;
 }
 
-ul {
-  list-style-type: none;
-}
-#pic{
-   float: left;
-   width: 50%;
-}
-
-#header-box{
-  width: 50%;
-  float: left;
-}
 
 #topContacts{
 text-align: left;
 }
 
-.biopic {
-  width: 100%;
-}
-
-img {
-
-}
-
 span {
-  padding: 5px;
 }
 
 #lets-connect {
   text-align: center;
 }
 
-/* Media queries to handle various device widths */
-
-@media only screen and (max-width: 1024px) {
-  #lets-connect {
-    margin-top: 5%;
-  }
+@media (max-width:400px){
+#lets-connect {
+  text-align: center;
+  padding-top: 14%;
 }
-
-@media only screen and (max-width:900px) {
 
 }
 
-@media only screen and (max-width: 750px) {
-  #lets-connect {
-    margin-top: 10%;
-  }
+ul {
+  list-style-type: none;
+}
 
-  .welcome-message {
-    display: none;
+
+#footerContacts {
+  padding: 5%;
+}
+
+#footerContacts {
+  list-style-type: none;
+  display: inline;
+}
+
+@media (min-width: 480px){
+  #footerContacts {
+    list-style-type: none;
+    padding: 5%;
+    display: inline;
   }
 }
 
 #map {
   display: block;
   height: 100%;
-  margin: 0 5%;
 }
 
 #mapDiv {
   height: 400px;
   width: 100%;
   padding-bottom: 5%;
+  background-color: #30415d;
 }
 
 
 
-@media only screen and (min-width: 750px) {
-  #skills-h3,
-  }
-}
+
 
 
