Use jshint and jsbeautiier htmlbeautifier and css beautifier to reformat code and add semi-colons to encapsulated functions

--- a/css/style.css
+++ b/css/style.css
@@ -1,229 +1,223 @@
 .container {
-  padding: 0px;
-  margin: 0px;
+    padding: 0px;
+    margin: 0px;
 }
 
 .education-entry,
 .work-entry,
 .project-entry {
-  padding: 0 5%;
+    padding: 0 5%;
 }
 
 img {
-  padding: 5%;
+    padding: 5%;
 }
 
 #pic {
-  padding:0;
+    padding: 0;
 }
 
-#header-box{
-  padding:0px;
+#header-box {
+    padding: 0px;
 }
 
 #biopic {
-  padding: 0;
+    padding: 0;
 }
 
 h1 {
-  font-size: 5em;
-  line-height: 80%;
-  color: #e24;
-  display: inline;
-  font-family: 'Bowlby One SC', cursive;
-  padding: 5%;
-  display: block;
+    font-size: 5em;
+    line-height: 80%;
+    color: #e24;
+    display: inline;
+    font-family: 'Bowlby One SC', cursive;
+    padding: 5%;
+    display: block;
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 1.75em;
-  color: #eb6e80;
-  line-height: 29px;
-  padding: 10px;
-  font-family: 'Bowlby One SC', cursive;
+    font-weight: bold;
+    font-size: 1.75em;
+    color: #eb6e80;
+    line-height: 29px;
+    padding: 10px;
+    font-family: 'Bowlby One SC', cursive;
 }
 
 h3 {
-  font-style: italic;
-  font-size: 1.25em;
-  color: #e24;
-  line-height: 22px;
+    font-style: italic;
+    font-size: 1.25em;
+    color: #e24;
+    line-height: 22px;
 }
 
 h4 {
-  font-weight: bold;
-  font-size: 1em;
-  color: #4a4a4a;
-  line-height: 17px;
+    font-weight: bold;
+    font-size: 1em;
+    color: #4a4a4a;
+    line-height: 17px;
 }
 
 h2,
 h3,
 h4,
 h5 {
-  padding:10px 5%;
-
+    padding: 10px 5%;
 }
 
 #role {
-  padding-left: 7%;
-  font-size: 1.5em;
-  font-style: bold;
-  color: #e9b000;
-  padding-top: 0;
+    padding-left: 7%;
+    font-size: 1.5em;
+    font-style: bold;
+    color: #e9b000;
+    padding-top: 0;
 }
 
 .date-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
+    font-style: italic;
+    font-size: 14px;
+    color: #999;
+    line-height: 16px;
 }
 
 .location-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
-  float: right;
-
+    font-style: italic;
+    font-size: 14px;
+    color: #999;
+    line-height: 16px;
+    float: right;
 }
 
 p {
-  font-size: 14px;
-  color: #333;
-  line-height: 21px;
+    font-size: 14px;
+    color: #333;
+    line-height: 21px;
 }
 
 a {
-  color: #1199c3;
-  text-decoration: none;
-  margin-top: 10px;
-
+    color: #1199c3;
+    text-decoration: none;
+    margin-top: 10px;
 }
 
 .welcome-message {
-  font-style: italic;
-  font-size: 1.5em;
-  color: #dcc7aa;
-  padding: 10%;
-  display: block;
+    font-style: italic;
+    font-size: 1.5em;
+    color: #dcc7aa;
+    padding: 10%;
+    display: block;
 }
 
 #message {
-  background-color:#008f95;
+    background-color: #008f95;
 }
 
 #skills-h3 {
-  color: #eb6e80;
-  margin: 1em;
+    color: #eb6e80;
+    margin: 1em;
 }
 
 .orange {
-  background-color: #e9b000;
+    background-color: #e9b000;
 }
 
 .orange-text {
-  color: #008f95;
+    color: #008f95;
 }
 
 .white-text {
-  font-weight: bold;
-  color: #dcc7aa;
-  padding: 7d%;
+    font-weight: bold;
+    color: #dcc7aa;
+    padding: 7d%;
 }
 
 .gray {
-  background-color: #f3f3f3;
-  padding-bottom: 10px;
-  clear:both;
+    background-color: #f3f3f3;
+    padding-bottom: 10px;
+    clear: both;
 }
 
 .dark-gray {
-  background-color: #4a4a4a;
+    background-color: #4a4a4a;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 #projects {
-  background-color: #e9b000;
-
+    background-color: #e9b000;
 }
+
 .flex-box {
  /* display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 10px;*/
+  padding: 10px;*/;
 }
 
 .flex-column {
 /*  display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;*/
+  flex-wrap: nowrap;*/;
 }
 
 .center-content {
-  padding: 2.5% 5%;
+    padding: 2.5% 5%;
 }
 
-
-#topContacts{
-text-align: left;
+#topContacts {
+    text-align: left;
 }
 
 span {
 }
 
 #lets-connect {
-  text-align: center;
+    text-align: center;
 }
 
-@media (max-width:400px){
-#lets-connect {
-  text-align: center;
-  padding-top: 14%;
-}
-
+@media (max-width:400px) {
+    #lets-connect {
+        text-align: center;
+        padding-top: 14%;
+    };
 }
 
 ul {
-  list-style-type: none;
-}
-
-
-#footerContacts {
-  padding: 5%;
-}
-
-#footerContacts {
-  list-style-type: none;
-  display: inline;
-}
-
-@media (min-width: 480px){
-  #footerContacts {
     list-style-type: none;
+}
+
+#footerContacts {
     padding: 5%;
+}
+
+#footerContacts {
+    list-style-type: none;
     display: inline;
-  }
+}
+
+@media (min-width: 480px) {
+    #footerContacts {
+        list-style-type: none;
+        padding: 5%;
+        display: inline;
+    };
 }
 
 #map {
-  display: block;
-  height: 100%;
+    display: block;
+    height: 100%;
 }
 
 #mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%;
-  background-color: #30415d;
+    height: 400px;
+    width: 100%;
+    padding-bottom: 5%;
+    background-color: #30415d;
 }
 
 
